[package]
name = "convert"
version = "0.1.0"
authors = ["Sacha Arbonel <sacha.arbonel@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
pdfium_rs = { git = "https://github.com/asafigan/pdfium_rs", branch = "main"}
